--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="container">
       <div id="profile">
         <img
-          src="assets/avatar-light.png"
+          src="assets/avatar-dark.png"
           alt="foto de Jovane Costa, usando calça verde, camisa roxa, com um fundo roxo na imagem."
         />
         <p>@jovane.m.costa</p>
